# Tren

./: .env.example  .gitignore
.github/: copilot-instructions.md
docker/: docker-compose.yml
sql/: Drop and create, initial.sql
tren_api/: Cargo.toml
tren_api/src/: conversions.rs  main.rs  models.rs  rows.rs
tren_api/src/controllers/: mod.rs  workouts_controller.rs
tren_api/src/repositories/: mod.rs  workout_repository.rs
tren_api/src/services/: mod.rs  workout_service.rs
tren_webclient/example-app/: .env.example  AGENTS.md  package-lock.json
tren_webclient/example-app/app/Helpers/: ConnectionHelper.php
tren_webclient/example-app/app/Http/Controllers/: WorkoutPocController.php
tren_webclient/example-app/app/Livewire/: Exercises.php  Workout.php  WorkoutList.php
tren_webclient/example-app/app/Models/: ExerciseData.php  WorkoutData.php  WorkoutExerciseData.php  WorkoutSetData.php
tren_webclient/example-app/config/: services.php
tren_webclient/example-app/resources/views/: livewire-test.blade.php
tren_webclient/example-app/resources/views/layouts/app/: sidebar.blade.php
tren_webclient/example-app/resources/views/livewire/: exercises-poc.blade.php  livewire-test.blade.php
tren_webclient/example-app/resources/views/workouts/: index.blade.php
tren_webclient/example-app/routes/: web.php
