[package]
name = "tren_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Async trait support
async-trait = "0.1"

# Web framework for HTTP endpoints
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# PostgreSQL database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment variables
dotenv = "0.15"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# UUID and time utilities
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
